# py

./: .flake8  .gitignore  LICENSE  README.md  mypy.ini  noxfile.py  pyproject.toml
.github/workflows/: coverage.yml  tests.yml
docs/: conf.py  reference.rst
src/hp/: __init__.py  console.py  wikipedia.py
tests/: __init__.py  conftest.py  test_console.py  test_wikipedia.py
